welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:26: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if ((j+decalage)%tailleY != 0){return 0}
  ^